[tool.poetry]
name = "pnp_denoising_diffusion"
version = "0.1.0"
description = ""
packages = [
    { include = "pnp_denoising_diffusion", from = "src" },
]
authors = []
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11"
pyaml = "^25.7.0"
matplotlib = "^3.10.7"
ipykernel = "^7.1.0"
python-box = "^7.3.2"
lpips = "^0.1.4"
torchmetrics = "^1.9.0"
numpy = "^2.4.3"
opencv-python-headless = "^4.13.0.92"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
